# streamlit-video-coordinates

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  simple_example.py  streamlit_app.py  test_bugs.py  test_component.py  test_fixes.py
src/streamlit_video_coordinates/: __init__.py  url_util.py
src/streamlit_video_coordinates/frontend/: index.html  main.js  style.css
