[project]
name = "streamlit-video-coordinates"
version = "0.1.0"
description = "Streamlit component that displays a video and returns coordinates and frame indices when you click on paused frames"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["streamlit>=1.34"]
authors = [
    { name = "Matija Medvidović", email = "matija.medvidovic@gmail.com" },
]
license = { file = "LICENSE" }
keywords = [
    "python",
    "streamlit",
    "video",
    "component",
    "streamlit-component",
    "coordinates",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Matematija/streamlit-video-coordinates"
Repository = "https://github.com/Matematija/streamlit-video-coordinates"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
streamlit_video_coordinates = ["frontend/*"]

[tool.ruff]
exclude = [".git", ".vscode", ".pytest_cache", ".mypy_cache", ".env"]
line-length = 88

[tool.ruff.lint]
ignore = ["B008", "ISC001", "E501", "W191"]
select = [
    "B",
    "E",
    "F",
    "W",
    "I",
    "N",
    "C4",
    "EXE",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ERA",
    "PLC",
    "RUF",
    "ARG",
]
